@@ -1,7 +1,7 @@
 var util = require("util"),
     Gzip = require("gzbz2").Gzip,
-    Request = require("./request"),
-    BufferedStream = require("./bufferedstream");
+    BufferedStream = require("bufferedstream"),
+    Request = require("./request");
 
 /**
  * A middleware that gzip encodes the body of the response on the fly if the
