@@ -4,7 +4,7 @@ var util = require("util"),
     url = require("url"),
     EventEmitter = require("events").EventEmitter,
     UserError = require("usererror"),
-    BufferedStream = require("./bufferedstream"),
+    BufferedStream = require("bufferedstream"),
     utils = require("./utils");
 
 /**
