@@ -1,5 +1,5 @@
 var util = require("util"),
-    BufferedStream = require("./bufferedstream");
+    BufferedStream = require("bufferedstream");
 
 /**
  * A middleware that wraps the response body in a JavaScript callback function
