@@ -2,8 +2,8 @@ var url = require("url"),
     assert = require("assert"),
     EventEmitter = require("events").EventEmitter,
     util = require("util"),
+    BufferedStream = require("bufferedstream"),
     strata = require("./index"),
-    BufferedStream = require("./bufferedstream"),
     lint = require("./lint"),
     utils = require("./utils");
 
