@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "usererror": "1.0.0",
+        "bufferedstream": "1.0.0",
         "gzbz2": "0.1.0",
         "mime": "1.2.3",
         "markdown": "0.2.1"
